<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindDate">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="2dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title=" Create a plan to find date"
        app:titleTextAppearance="@style/ToolbarTitleTheme" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/finddate" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="296dp"
        android:layout_height="31dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:text="@string/find_your_date_by_adding_your_preferrences_choices_enter_your_date_choice"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <android.inputmethodservice.ExtractEditText
        android:id="@+id/extractEditText"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/outline"
        android:gravity="top"
        android:hint="@string/describe_your_perfect_date"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/round__background"
        android:divider="@drawable/radio_button_gender"
        android:orientation="horizontal"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extractEditText">


        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="120dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:scaleX="0.70"
            android:scaleY="0.70"
            android:text="@string/male"
            android:textColor="#2A2A2A"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:scaleX="0.70"
            android:scaleY="0.70"
            android:text="@string/female"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:scaleX="0.70"
            android:scaleY="0.70"
            android:text="@string/any"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:fontFamily="@font/roboto"
        android:text="@string/looking_for"
        android:textColor="#778899"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <android.inputmethodservice.ExtractEditText
        android:id="@+id/extractEditTexttw"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/outline"
        android:hint="@string/age"
        android:paddingStart="20dp"
        android:textAlignment="gravity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:fontFamily="@font/roboto"
        android:scaleX=".75"
        android:scaleY=".75"
        android:text="Only verified profiles"
        android:textColor="#2A2A2A"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/extractEditTexttw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/extractEditTexttw"
        app:layout_constraintTop_toTopOf="@+id/extractEditTexttw" />

    <ImageView
        android:id="@+id/nextimageone"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extractEditTexttw"
        app:srcCompat="@drawable/nxtbtn" />

</androidx.constraintlayout.widget.ConstraintLayout>