<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindProjectPartnerExt">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarpartnerex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="2dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title=" Create plan to find Project Partner"
        app:titleTextAppearance="@style/ToolbarTitleTheme" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="212dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarpartnerex"
        app:srcCompat="@drawable/find_project_partner" />

        <TextView
            android:id="@+id/find_a_co_f"
            android:layout_width="187dp"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/fina_a_partner_for_your_business_tell_us_something_about_your_business"
            android:textColor="#2A2A2A"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <android.inputmethodservice.ExtractEditText
            android:id="@+id/edittextone"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/outline"
            android:gravity="top"
            android:hint="@string/what_r_u_looking"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:textAlignment="gravity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/find_a_co_f" />

    <android.inputmethodservice.ExtractEditText
        android:id="@+id/websiteEditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_vertical"
        android:background="@drawable/outline"
        android:hint="@string/shud__carry_skill"
        android:paddingStart="20dp"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextone" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/round__background"
        android:divider="@drawable/radio_button_gender"
        android:orientation="horizontal"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/websiteEditText">


        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="120dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:scaleX="0.70"
            android:scaleY="0.70"
            android:text="@string/male"
            android:textColor="#2A2A2A"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:scaleX="0.70"
            android:scaleY="0.70"
            android:text="@string/female"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:scaleX="0.70"
            android:scaleY="0.70"
            android:text="@string/any"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:fontFamily="@font/roboto"
        android:text="@string/looking_for"
        android:textColor="#778899"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnercompen"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <android.inputmethodservice.ExtractEditText
        android:id="@+id/extractEditTexttwo3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_vertical"
        android:background="@drawable/outline"
        android:hint="@string/benefits"
        android:paddingStart="20dp"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnercompen" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinneredu"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/spinner"
        android:padding="20dp"
        app:layout_constraintEnd_toStartOf="@+id/spinnerTimeline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extractEditTexttwo3" />

    <android.inputmethodservice.ExtractEditText
        android:id="@+id/spinnerTimeline"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_vertical"
        android:background="@drawable/outline"
        android:hint="@string/ex_in_yrs"
        android:paddingStart="20dp"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toBottomOf="@+id/spinneredu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/spinneredu"
        app:layout_constraintTop_toTopOf="@+id/spinneredu"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnercompAmt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/spinner"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinneredu" />

        <Button
            android:id="@+id/findprojectextnext"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/nxtbtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnercompAmt" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>